Scripting: Rework data/resource reading